<resources>
    <string name="app_name">RHSMustangs</string>

    <string name="title_section1">Links</string>
    <string name="title_section2">Schedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Toast</string>
    <string name="action_switch">Switch</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_updated_days">Updated Days</string>
    <string name="action_save_updated_days">Save Updated Days</string>
    <string name="action_clear_data">Clear Data</string>
    <string name="action_load_data">Load Data</string>

    <string name="group_prompt">Group</string>
    <string name="no_updated_days">No updated days.</string>
    <string name="action_clear_updated_days">Clear Updated Days</string>

    <string name="schedule_preference_file">com.sarangjoshi.rhsmustangs.SCHEDULE_PREFERENCE_FILE</string>
    <string name="action_refresh_holidays">Refresh holidays</string>
    <string name="action_holidays">Holidays</string>
    <string name="no_holidays">No Holidays.</string>
    <string name="action_save_base_days">Save Base Days</string>
    <string name="action_refresh_base_days">Refresh Base Days</string>
</resources>
