<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/group_spinner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="ifRoom"
        android:title="@string/group_prompt"/>

    <item
        android:id="@+id/action_see_updated_days"
        android:title="@string/action_updated_days"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_updated_days"
        android:title="@string/action_save_updated_days"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_updated_days"
        android:title="@string/action_clear_updated_days"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_data"
        android:title="@string/action_load_data"
        app:showAsAction="never" />

</menu>